# inference_results_v4.0

./: README.md
closed/ASUSTeK/: Makefile.power
closed/ASUSTeK/code/: dlrm-v2-99.9  llama2-70b-99
closed/ASUSTeK/docker/: Dockerfile.x86_64  requirements.orin.txt
closed/ASUSTeK/power/: check_switch.sh  server-smc521ge-0007.cfg  set_fan_speed.sh
closed/ASUSTeK/results/: submission_checker_log.txt
closed/ASUSTeK/scripts/: mig_get_uuid.sh
closed/ASUSTeK/systems/: ESC8000_E11P_H100x8_TRT.json  ESC8000_E11_L40Sx8_TRT.json  ESC8000_E11_L4x8_TRT.json  L40Sx8_TRT.json  system_descriptions.tsv
closed/Azure/: Makefile  Makefile.build  Makefile.const  Makefile.docker  README.md  download
closed/Azure/results/: submission_checker_log.txt
closed/Azure/scripts/: build_triton_cpu_libs.sh
closed/Azure/systems/: NC_H100_v5_TRT.json
closed/CTuning/: calibration.md
closed/CTuning/code/: gptj-99
closed/CTuning/systems/: Cirrascale_4xQAIC_AI_100-kilt-qaic-glow-vdefault-default_config.json  GATEOverflow_Intel_Saphhire_Rapids-intel-cpu-pytorch-vdefault-default_config.json  GATE_Overflow_Intel_Sapphire_Rapids-cpp-cpu-onnxruntime-vdefault-default_config.json  GATE_Overflow_Intel_Sapphire_Rapids-cpp-gpu-onnxruntime-vdefault-default_config.json  GATE_Overflow_Intel_Sapphire_Rapids-nvidia_original-gpu-tensorrt-vdefault-default_config.json  GATE_Overflow_Intel_Sapphire_Rapids-reference-gpu-pytorch-v2.1.2-default_config.json  PCSPECIALIST_AMD_AM5_PC-reference-cpu-onnxruntime-v1.15.1-default_config.json  PCSPECIALIST_AMD_AM5_PC_with_Nvidia_RTX_4090-nvidia_original-gpu-tensorrt-vdefault-default_config.json  PCSPECIALIST_AMD_AM5_PC_with_Nvidia_RTX_4090-reference-cpu-pytorch-v2.1.0-default_config.json  PCSPECIALIST_AMD_AM5_PC_with_Nvidia_RTX_4090-reference-gpu-onnxruntime-v1.16.3-default_config.json  PCSPECIALIST_AMD_AM5_PC_with_Nvidia_RTX_4090-reference-gpu-pytorch-v2.1.0-default_config.json  PCSPECIALIST_AMD_AM5_PC_with_Nvidia_RTX_4090-reference-gpu-tf-v2.13.0-default_config.json  PCSPECIALIST_AMD_AM5_with_Nvidia_RTX_4090-cpp-cpu-onnxruntime-vdefault-default_config.json  PCSPECIALIST_AMD_AM5_with_Nvidia_RTX_4090-cpp-gpu-onnxruntime-vdefault-default_config.json  PCSPECIALIST_AMD_AM5_with_Nvidia_RTX_4090-reference-gpu-pytorch-v2.1.2-default_config.json  Thundercomm_RB6-kilt-qaic-glow-vdefault-default_config.json  aws_dl2q.24xlarge-kilt-qaic-glow-vdefault-default_config.json
closed/Cisco/: calibration.md
closed/Cisco/code/: README.md  user_config.py
closed/Cisco/systems/: 1-node-2S-C240M7-EMR-PyTorch-INT4.json  1-node-2S-C240M7-EMR-PyTorch-INT8.json  1-node-2S-C240M7-EMR-PyTorch-MIX.json  1-node-2S-X210M7-EMR-PyTorch-INT8.json
closed/Dell/: README.md
closed/Dell/code/: main.py
closed/Dell/docker/: Dockerfile.aarch64  Dockerfile.x86_64
closed/Dell/results/: submission_checker_log.txt
closed/Dell/scripts/: create_poetry_lock.py  split_datacenter_edge.py
closed/Dell/systems/: R750xa_A100_PCIe_80GBx4_TRT.json  R760_CPU.json  R760_L40Sx2_TRT.json  R760xa_L40Sx4_TRT.json  R7615_L40Sx2_TRT.json  XE8640_H100_SXM_80GBx4_TRT.json  XE9640_H100_SXM_80GBX4_TRT.json  XE9680_H100_SXM_80GBx8_TRT.json  XE9680_H100_SXM_80GBx8_TRT_MaxQ.json  XE9680_IntelXeon8480_NVIDIA_H100_SXM_80GBx8_TRT.json  XR7620_L4x1_TRT.json  XR8620_L4x1_MaxQ_TRT_MaxQ.json  XR8620_L4x1_TRT.json  r760_q4_ultra.json  vR760_L40S_48Cx2_TRT.json
closed/Fujitsu/: Makefile.build  Makefile.docker  Makefile.submission  bandwidth_requirement_CDI_L40Sx8-16.txt  start_from_device_gx2560m7.txt
closed/Fujitsu/code/: 3d-unet-99  bert-99
closed/Fujitsu/configs/: error.py
closed/Fujitsu/docker/: Dockerfile.aarch64  Dockerfile.x86_64  pyproject.toml  requirements.x86_64.1.txt
closed/Fujitsu/documentation/: bandwidth_requirement.md  calibration.md
closed/Fujitsu/power/: set_nvlink.sh
closed/Fujitsu/results/: submission_checker_log.txt
closed/Fujitsu/scripts/: generate_system_descriptions.py  get_inferentia_device_list.sh  get_mig_profiles.py  get_system_id.py
closed/Fujitsu/systems/: CDI_L40Sx16_TRT.json  CDI_L40Sx8_MaxP_TRT.json  CDI_L40Sx8_TRT.json  GX2560M7_H100_SXM_80GBx4_TRT.json
closed/GigaComputing/: Makefile.docker  README.md  summary.csv
closed/GigaComputing/docker/: Dockerfile.build
closed/GigaComputing/results/: submission_checker_log.txt
closed/GigaComputing/scripts/: utils.py
closed/GigaComputing/systems/: GIGABYTE-G593-SD1_DGX-H100_H100-SXM-80GBx8_TRT.json
closed/Google/: Makefile.const  calibration.md
closed/Google/code/: 3d-unet-99.9  bert-99  (+3 more)
closed/HPE/: Makefile.docker  README.md
closed/Intel-HabanaLabs/: calibration.md
closed/Krai/: calibration_qualcomm.md
closed/Lenovo/: Makefile.build  Makefile.const  Makefile.data  Makefile.docker  Makefile.power  Makefile.tests  calibration_qualcomm.md
closed/NVIDIA/: Makefile.build  Makefile.const  Makefile.docker  Makefile.power  Makefile.submission  README.md  README_Jetson.md
closed/Oracle/: Makefile.data  calibration.md  run_benchamrks.sh  run_compliance.sh
closed/Oracle/docker/: Dockerfile.orin  pyproject.toml
closed/Qualcomm/: README.md  calibration.md
closed/SiMa/code/resnet50/palette/src/loadgen_plugin/loadgen/: CMakeLists.txt  image_loader.h  loadgen_mem_cfg.h  loadgen_mem_manager.cc  loadgen_mem_manager.h  loadgen_query_intf.cc  loadgen_query_intf.h  loadgen_wrapper.cc  loadgen_wrapper.h  loadgen_wrapper_ctrl.h  loadgen_wrapper_intf.cc  loadgen_wrapper_intf.h
closed/Supermicro/: Makefile
closed/Wiwynn/: Makefile.build  Makefile.const  summary.csv
network/Krai/: calibration_qualcomm.md
open/CTuning/: calibration.md
open/Dell_Broadcom/: Makefile.const
open/HPE/: calibration.md
open/JuniperNetworks/: README.md  calibration.md
open/NVIDIA/: Makefile  Makefile.build  Makefile.const  Makefile.docker  Makefile.submission  README.md
open/NVIDIA/code/harness/: CMakeLists.txt
open/NVIDIA/code/harness/common/: harness_flags.hpp
open/NVIDIA/code/harness/harness_llm/: llm_server.cc  main_llm.cc
open/NVIDIA/code/harness/lwis/include/: lwis_buffers.h
open/RedHat/: README.md
open/RedHat-Supermicro/: README.md
(+33037 files in other folders)
