[tool.poetry]
name = "MLPerf-Inference"
version = "0.1.0"
description = ""
authors = ["MLPerf-Inference"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "0.12.0"
appdirs = "1.4.4"
astunparse = "1.6.3"
attrs = "21.2.0"
beautifulsoup4 = "4.9.3"
boto3 = "1.17.76"
botocore = "1.20.76"
bs4 = "0.0.1"
cachetools = "4.2.2"
certifi = "2023.7.22"
cffi = "1.14.5"
chardet = "4.0.0"
click = "8.0.2"
cuda-python = "12.1.0"
cycler = "0.10.0"
Cython = "0.29.23"
decorator = "4.4.2"
dill = "0.3.6"
distlib = "0.3.1"
et-xmlfile = "1.1.0"
filelock = "3.0.12"
flatbuffers = "1.12"
fsspec = "2023.4.0"
google-auth = "1.30.0"
google-auth-oauthlib = "0.4.4"
google-pasta = "0.2.0"
grpcio = "1.34.1"
idna = "2.10"
inflect = "4.1.0"
iniconfig = "1.1.1"
jdcal = "1.4.1"
jmespath = "0.10.0"
joblib = "1.2.0"
keras-nightly = "2.5.0.dev2021032900"
linecache2 = "1.0.0"
Markdown = "3.3.4"
networkx = "2.5.1"
oauthlib = "3.1.0"
openpyxl = "3.0.4"
packaging = "20.9"
pillow = "9.4.0"
pluggy = "0.13.1"
pooch = "1.3.0"
protobuf = "3.20.2"
py = "1.11.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.20"
pydicom = "2.1.2"
Pygments = "2.15.1"
pyparsing = "2.4.7"
pytest-html = "3.2.0"
python-dateutil = "2.8.1"
pytz = "2021.1"
PyVISA = "1.11.3"
PyVISA-py = "0.5.2"
responses = "0.18.0"
requests = "2.31.0"
requests-oauthlib = "1.3.0"
rsa = "4.7.2"
s3transfer = "0.4.2"
SimpleITK = "2.0.2"
simplejson = "3.19.1"
six = "1.15.0"
soundfile = "0.10.3.post1"
soupsieve = "2.2.1"
threadpoolctl = "2.1.0"
tokenizers = "0.13.3"
toml = "0.10.1"
tqdm = "4.65.0"
traceback2 = "1.4.0"
typing-extensions = "4.6.3"
Unidecode = "1.1.1"
unittest2 = "1.1.0"
urllib3 = "1.26.18"
virtualenv = "20.4.6"
pynvml = "11.5.0"
fbgemm-gpu = "0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
